--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div id="txt">TimerTimerTimer</div>
 			<button onclick="changeOverlayColor()">It's Disco time!</button>
 			-->
-			<div id="TxT"></div>
+			<div id="clock"></div>
 
 			<img class="myHydra" src="Images/hydra.jpg" width="150" height="150">
 			<img id="myImg" src="Images/punsch.jpg" width="150" height="150">
