--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 
 	<head>
 		<title>This is my First Page!</title>
-		<script src="JS/jquery-3.2.1.min.js"></script>
-		<script src="JS/timeAndDate.js"></script>
 		<link rel="stylesheet" href="CSS/clockStyle.css"></style>
 	</head>
 	
 	<body onload="currentTime(); randomNumber(); changeOverlayColor(); changeBackgroundColor()">
 		<div class="container">
 			<input type="button" value="Warn Me!" onclick="warnMe()"><br>
-			<button type="toggleButton" onclick="togglePI()">Toggle PI!</button><br>
+			<button id="toggleButton">Show PI!</button><br>
 
 			<p id="helloworld">Hello World!</p>
 			<p id="pi"/>
@@ -29,6 +27,9 @@
 			<div id="overlay"></div>
 			<img id="myDog" src="Images/dog.jpg" width="100" height="100">
 		</div>
+
+		<script src="JS/jquery-3.2.1.min.js"></script>
+		<script src="JS/timeAndDate.js"></script>
 
 	</body>
 
