--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
 			<input type="button" value="Warn Me!" onclick="warnMe()"><br>
 			<button id="toggleButton">Show PI!</button><br>
 
+			<nav>
+				<ul>
+					<li><a href="http://google.com" target="_blank">Google</a>
+					</li>
+					<li><a href="http://youtube.com" target="_blank">Youtube</a>
+					</li>
+					<li><a href="http://soundcloud.com" target="_blank">Soundcloud</a>
+					</li>
+				</ul>
+			</nav>
+
 			<p id="helloworld">Hello World!</p>
 			<p id="pi"/>
 			<p id="randNum"/>
-
+			
 			<!--
 			<div id="txt">TimerTimerTimer</div>
 			<button onclick="changeOverlayColor()">It's Disco time!</button>
