--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 
 			<nav>
 				<ul>
-					<li><a href="http://google.com" target="_blank">Google</a>
+					<li>
+						<a href="http://google.com" target="_blank">Google</a>
 					</li>
-					<li><a href="http://youtube.com" target="_blank">Youtube</a>
+					<li>
+						<a href="http://youtube.com" target="_blank">Youtube</a>
 					</li>
-					<li><a href="http://soundcloud.com" target="_blank">Soundcloud</a>
+					<li>
+						<a href="http://soundcloud.com" target="_blank">Soundcloud</a>
 					</li>
 				</ul>
 			</nav>
