--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 			<p id="pi"/>
 			<p id="randNum"/>
 			
+			<div id="randomList"> This is where the result list will be!
+			</div>
+
 			<!--
 			<div id="txt">TimerTimerTimer</div>
 			<button onclick="changeOverlayColor()">It's Disco time!</button>
