--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 			<div id="randomList"> This is where the result list will be!
 			</div>
 
+			<button id="callbackButton">Callback Button</button><br>
+			<p id="callbackText">This is the Callback text</p>
+
 			<!--
 			<div id="txt">TimerTimerTimer</div>
 			<button onclick="changeOverlayColor()">It's Disco time!</button>
