--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 
 	<head>
 		<title>This is my First Page!</title>
@@ -49,7 +49,8 @@
 		</div>
 
 		<script src="JS/jquery-3.2.1.min.js"></script>
-		<script src="JS/timeAndDate.js"></script>
+		<script src="JS/script.js"></script>
+		<script src="JS/angular.js"></script>
 
 	</body>
 
