--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>This is my First Page!</title>
-		<link rel="stylesheet" href="CSS/clockStyle.css"></style>
+		<link rel="stylesheet" href="CSS/style.css"></style>
 	</head>
 	
 	<body onload="currentTime(); randomNumber(); changeOverlayColor(); changeBackgroundColor()">
