--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="myApp">
 
 	<head>
 		<title>This is my First Page!</title>
 		<link rel="stylesheet" href="CSS/style.css"></style>
+		<script src="JS/angular.js"></script>
+		<script src="JS/jquery-3.2.1.min.js"></script>
 	</head>
 	
-	<body onload="currentTime(); randomNumber(); changeOverlayColor(); changeBackgroundColor()">
+	<body onload="changeBackgroundColor()">
+
 		<div class="container">
 			<input type="button" value="Warn Me!" onclick="warnMe()"><br>
 			<button id="toggleButton">Show PI!</button><br>
@@ -25,10 +28,13 @@
 				</ul>
 			</nav>
 
-			<p id="helloworld">Hello World!</p>
+			<div ng-controller="MainCtrl">
+				<p id="helloworld">{{helloworld}}</p>
+			</div>
+
 			<p id="pi"/>
-			<p id="randNum"/>
-			
+			<p id="randNum" ng-controller="RandomNumberCtrl">{{randNum}}</p>
+
 			<div id="randomList"> This is where the result list will be!
 			</div>
 
@@ -39,18 +45,16 @@
 			<div id="txt">TimerTimerTimer</div>
 			<button onclick="changeOverlayColor()">It's Disco time!</button>
 			-->
-			<div id="clock"></div>
+			<div id="clock" ng-controller="TimeCtrl">{{clock}}</div>
 
 			<img class="myHydra" src="Images/hydra.jpg" width="150" height="150">
 			<img id="myImg" src="Images/punsch.jpg" width="150" height="150">
 		
-			<div id="overlay"></div>
+			<div id="overlay" ng-controller="RandomColorCtrl"></div>
 			<img id="myDog" src="Images/dog.jpg" width="100" height="100">
 		</div>
 
-		<script src="JS/jquery-3.2.1.min.js"></script>
 		<script src="JS/script.js"></script>
-		<script src="JS/angular.js"></script>
 
 	</body>
 
