--- a/index.html
+++ b/index.html
@@ -1,64 +1,15 @@
-<!DOCTYPE html>
-<html ng-app="myApp">
-
+<!doctype html>
+<html lang="en">
 <head>
-	<title>This is my First Page!</title>
-	<link rel="stylesheet" href="CSS/style.css">
-	</style>
-	<script src="JS/angular.js"></script>
-	<script src="JS/jquery-3.2.1.min.js"></script>
+  <meta charset="utf-8">
+  <title>EventCountdown</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="icon" type="image/x-icon" href="./src/favicon.ico"> -->
 </head>
-
 <body>
-
-	<div class="container">
-
-		<nav>
-			<ul>
-				<li>
-					<a href="http://google.com" target="_blank">Google</a>
-				</li>
-				<li>
-					<a href="http://youtube.com" target="_blank">Youtube</a>
-				</li>
-				<li>
-					<a href="http://soundcloud.com" target="_blank">Soundcloud</a>
-				</li>
-			</ul>
-		</nav>
-
-		<div ng-controller="MainCtrl">
-			<p id="helloworld">{{helloworld}}</p>
-		</div>
-
-		<div ng-controller="TogglePI">
-			<p id="pi" ng-show="show">{{show}}</p>
-			<button id="toggleButton" ng-click="toggle()">Show PI!</button><br>
-		</div>
-		<p id="randNum" ng-controller="RandomNumberCtrl">{{randNum}}</p>
-
-		<div id="randomList"> This is where the result list will be!
-		</div>
-
-		<button id="callbackButton">Callback Button</button><br>
-		<p id="callbackText">This is the Callback text</p>
-
-		<!--
-			<div id="txt">TimerTimerTimer</div>
-			<button onclick="changeOverlayColor()">It's Disco time!</button>
-		-->
-		<div id="clock" ng-controller="TimeCtrl">{{clock}}</div>
-		<!--
-		<div ng-include="'imageControl.html'"></div>
-		-->
-		<img class="myHydra" src="Images/hydra.jpg" width="150" height="150">
-		<img id="myImg" src="Images/punsch.jpg" width="150" height="150">
-
-		<div id="overlay" ng-controller="RandomColorCtrl"></div>
-		<img id="myDog" src="Images/dog.jpg" width="100" height="100">
-
-		<script src="JS/script.js"></script>
-
-</body>
-
+  <app-root></app-root>
+  <a href="https://youtu.be/1ArHlsyoXBA" style="width:1px; height:1px;"></a>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
